--- a/app/src/main/res/layout/fragment_publicacoes.xml
+++ b/app/src/main/res/layout/fragment_publicacoes.xml
@@ -26,16 +26,26 @@
         android:id="@+id/txt_github"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="236dp"
         android:fontFamily="sans-serif-black"
         android:text="Github"
         android:textAlignment="center"
         android:textColor="#020202"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="212dp"
+        android:layout_height="204dp"
+        android:src="@drawable/meu_perfil"
+        app:layout_constraintBottom_toTopOf="@+id/txt_github"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:layout_constraintVertical_bias="0.12" />
+        app:layout_constraintVertical_bias="0.125" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
